		  all distros.
		- fix a bug with sample checks and exemption dirs.
		- default statdefault value changed to something valid. (note: statdefault is index, not name, of section).
		- no longer says N/Ams if you disable ping-check of BNCs.
		- rescan of an mp3 release in a audio_nosort_dir should no longer result in a symlink.
                - IRC groupstats triggers changed for consistency (!gp*), see http://bugs.pzs-ng.com/view.php?id=448 for details.

v1.0.9  --> 1.0.10 : (r2339)
		- psxc-imdb v2.8.
		- added option combine_path to allow clients that does not cwd into reldir.
		- fixed a bug with userstats over 2TB.
		- added support for (xvid) yv12 codec.
		- fixed a bug where .message showed full path to releasedir in stats.
		- fixed a bug in the subdir detection routine.
		- never search for sfv in a sample dir.
		- made sitewho and showlog compile in native 64bit.
		- added option to list compiled config in zipscript-c.

v1.0.8  --> 1.0.9  : (r2291)
		- fixed a bug in showlog.
		- fixed a bug with no-nfo symlinks being created if if nfo existed.
		- added Pee's AutoOp.tcl plugin (untested).
		- added option video_types in zsconfig.h - list of video types.
		- added support for sample_script.
		- new var in zsconfig.h - sample_list - list of sample dirs.
		- added support for special announce on sample upload.
		- some new avinfo settings added.
		- New vars in dzsbot.vars: %video_width %video_height %video_fps %video_aspect
		                           %video_type_long %video_type_short %video_audio_hz
		                           %video_audio_channels %video_audio_name
		                           %video_audio_code
		- do not show subdir on !new (showlog binary).
		- more compat with wzdftpd added.
		- added some more mp3 settings.
		- new vars in dzsbot.vars: %vbr_quality %vbr_minimum_bitrate %vbr_noiseshaping
		                           %vbr_stereomode %vbr_unwise %vbr_source
		- disable allow message_file_name if set to "".