@@ -12,7 +12,8 @@ v1.0.10 --> 1.0.xx :
 		- default statdefault value changed to something valid. (note: statdefault is index, not name, of section).
 		- no longer says N/Ams if you disable ping-check of BNCs.
 		- rescan of an mp3 release in a audio_nosort_dir should no longer result in a symlink.
-                - IRC groupstats triggers changed for consistency (!gp*), see http://bugs.pzs-ng.com/view.php?id=448 for details.
+		- IRC groupstats triggers changed for consistency (!gp*), see http://bugs.pzs-ng.com/view.php?id=448 for details.
+		- You can now have multiple completebars. In config, separate them by newline.
 
 v1.0.9  --> 1.0.10 : (r2339)
 		- psxc-imdb v2.8.
